--- a/projects/travelplan/src/index.html
+++ b/projects/travelplan/src/index.html
@@ -12,7 +12,7 @@
     href="https://fonts.googleapis.com/css?family=Material+Icons|Material+Icons+Outlined|Material+Icons+Two+Tone|Material+Icons+Round|Material+Icons+Sharp"
     rel="stylesheet">
   <script
-    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDBZUFT6BR8N-E3bNOITwD1Oq0LEDViVhY&libraries=places&language=en"></script>
+    src="https://maps.googleapis.com/maps/api/js?key=YOU_GOOGLE_API_KEY&libraries=places&language=en"></script>
 </head>
 
 <body>
